some minor changes

--- a/index.html
+++ b/index.html
@@ -9,24 +9,7 @@ data-wf-site="645e1049c8fcbff22dc45caf"
   <head>
     <meta charset="utf-8" />
     <title>Maestrro Finplan Academy</title>
-    <!-- <meta
-      content="Hireup is a responsive, high-converting, and beautifully designed job board for technology businesses. Bright, vibrant, and easily adapted, it offers the perfect starting point for numerous business types."
-      name="description"
-    />
-    <meta
-      content="Hireup - Webflow HTML Website Template"
-      property="og:title"
-    />
-  
-    <meta
-      content="Hireup - Webflow HTML Website Template"
-      property="twitter:title"
-    />
-    <meta
-      content="Hireup is a responsive, high-converting, and beautifully designed job board for technology businesses. Bright, vibrant, and easily adapted, it offers the perfect starting point for numerous business types."
-      property="twitter:description"
-    /> -->
-    
+
 <meta
 content="Maestrro Finplan Academy offers comprehensive financial planning courses led by industry expert Bhupesh P Chaudhri. Gain valuable knowledge and practical skills in personal finance, investment strategies, and retirement planning. Start your journey to financial success with us."
 name="description"
@@ -402,7 +385,7 @@ property="twitter:description"
           <div class="title-wrap-left">
             <div class="margin-bottom-16"><h3>What we offer</h3></div>
             <p class="paragraph-regular text-gray-600">
-              At Maesstro, we believe in delivering holistic and comprehensive
+              At Maestrro, we believe in delivering holistic and comprehensive
               education that goes beyond traditional finance books.
             </p>
           </div>
@@ -426,7 +409,7 @@ property="twitter:description"
                 <h1 class="heading-3">Authorized Eduaction Provider</h1>
               </div>
               <p class="paragraph-2">
-                Out of the only 15 institutions in India certified by FSAB .
+                Out of the only 15 institutions in India certified by FPSB .
                 Click<a
                   href="https://india.fpsb.org/authorized-education-providers/"
                   target="_blank"
@@ -631,10 +614,8 @@ property="twitter:description"
                             />
                           </div>
                           <p class="testimonial-quote">
-                            “Starting this CFP certification journey with no to little practical experience while being an undergrad was a tough job. 
-                            This CFP certification broadened my knowledge on personal finance and gave me an opportunity to explore different career avenues in finance. 
-                            Many thanks to Maestrro Finplan Academy (Bhupesh Sir) for supporting me throughout this journey without which it would have been difficult for me to clear CFP. 
-                            I would encourage others to reand global exposure and a competitive advantage.”
+                            “Starting this CFP certification journey with no to little practical experience while being an undergrad was a tough job.This CFP certification broadened my knowledge on personal finance and gave me an opportunity to explore different career avenues in finance. Many thanks to Maestrro Finplan Academy (Bhupesh Sir) for supporting me throughout this journey without which it would have been difficult for me to clear CFP. 
+                           <br> I would encourage others to enhance their career with Maestrro for global exposure and a competitive advantage.”
                           </p>
                           <div class="paragraph-regular text-color-gray-600">
                            <a href="https://www.linkedin.com/in/aditya-mane-2203601a6/" target="_blank" rel="noopener noreferrer"> <span class="text-color-primary">Aditya Mane</span></a> -
@@ -1009,9 +990,9 @@ finance content creator etc.
                 <div class="detail text-color-gray-400">Contact us</div>
               </div>
               <a href="/template/style-guide" class="footer-link"
-                >Email: contact@maestrrofinplanacademy.com</a
+                >Email: maestrrofinplanacademy@gmail.com</a
               ><a href="/template/license" class="footer-link"
-                >Address: Shri Hari Complex, Nr. samrat Ashok School,
+                >Address: A-001,Shri Hari Complex, Nr. samrat Ashok School,
                 Tisgaonpada, Kalyan East - 421306<br /></a
               ><a href="/template/changelog" class="footer-link"
                 >Phone: +91 9820540293</a
@@ -1024,7 +1005,7 @@ finance content creator etc.
           >
             <div class="footer-form-wrapper">
               <div class="margin-bottom-16">
-                <div class="detail text-color-gray-400">Drop us a email</div>
+                <div class="detail text-color-gray-400">Drop us an email</div>
               </div>
               <div class="footer-form-block w-form">
                 <form
