--- a/index.html
+++ b/index.html
@@ -90,6 +90,15 @@ property="twitter:description"
       }
     </style>
   </head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KBGEDL8RND"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KBGEDL8RND');
+</script>
   <body>
     <div
       data-collapse="medium"
