--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@ property="twitter:description"
                 <h1 class="heading-3">Personal Financial Planning Education</h1>
               </div>
               <p class="paragraph-2">
-                Comprehensive training and education programs allows students to
+                Comprehensive training and education programs allow students to
                 gain the best practices in the industry. Click
                 <a href="#">here</a> to know more about CFP exams.
               </p>
@@ -416,17 +416,11 @@ property="twitter:description"
             <div class="column-2 w-col w-col-4">
               <div class="div-block">
                 <h1 class="fa-icon"></h1>
-                <h1 class="heading-3">Authorized Eduaction Provider</h1>
+                <h1 class="heading-3">Authorized Education Provider</h1>
               </div>
               <p class="paragraph-2">
-                Out of the only 15 institutions in India certified by FPSB .
-                Click<a
-                  href="https://india.fpsb.org/authorized-education-providers/"
-                  target="_blank"
-                >
-                  here</a
-                >
-                to know more.<br />
+                Out of the only 15 institutions in India certified by FPSB.
+              
               </p>
             </div>
             <div class="w-col w-col-4">
@@ -436,7 +430,7 @@ property="twitter:description"
               </div>
               <p class="paragraph-2">
                 We empower career choices in finance for students through our
-                expert guidance and counselling.
+                expert guidance and counseling.
               </p>
             </div>
           </div>
