--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
               <p class="paragraph-2">
                 Comprehensive training and education programs allow students to
                 gain the best practices in the industry. Click
-                <a href="#">here</a> to know more about CFP exams.
+                <a href="https://india.fpsb.org/" target="_blank">here</a> to know more about CFP exams.
               </p>
             </div>
             <div class="column-2 w-col w-col-4">
@@ -468,7 +468,7 @@
             journey with CFA and set forth toward a future defined by
             excellence.
           </p>
-          <a href="https://webflow.com/templates/designers/conversionflow" target="_blank"
+          <a href="/CFA.html" target="_blank"
             class="cf-call-button _24px-bold w-inline-block">
             <div class="cf-gradient-span">Know More</div>
             <div class="cf-call-arrow-contain cf-gradient">
