--- a/CFA.html
+++ b/CFA.html
@@ -127,17 +127,17 @@
         <div class="navigation-middle">
           <nav role="navigation" class="nav-menu w-nav-menu">
             <a href="/" class="nav-link w-nav-link">Home</a
-            ><a href="/about" class="nav-link w-nav-link">Team</a
+            ><a href="index.html/#home" class="nav-link w-nav-link">Team</a
             ><a href="/browse" class="nav-link w-nav-link">Features</a
             ><a href="/blog" class="nav-link w-nav-link">Testimonials</a
             ><a
-              href="/pricing"
+              href="/Webinar.html"
               aria-current="page"
               class="nav-link w-nav-link w--current"
               >Webinar</a
             ><a href="/about" class="nav-link w-nav-link">FAQs</a
-            ><a href="/blog" class="nav-link w-nav-link">CFP</a
-            ><a href="/blog" class="nav-link w-nav-link">CFA</a>
+            ><a href="/CFP.html" class="nav-link w-nav-link">CFP</a
+            ><a href="/CFA.html" class="nav-link w-nav-link">CFA</a>
             <!-- <div class="navbar-mobile-button-wrapper">
               <a href="#" class="button-primary w-button">Login</a>
             </div> -->
