--- a/CFA.html
+++ b/CFA.html
@@ -14,15 +14,15 @@
     type="image/x-icon"
   />
   <meta
-  content="Learn CFA from Maestro Finplan Academy: Certified by FSAB | Learn from Industry Leaders"
+  content="Learn CFA from Maestro Finplan Academy: Certified by CFA | Learn from Industry Leaders"
   name="description"
 />
 <meta
-  content="Learn CFA from Maestro Finplan Academy: Certified by FSAB | Learn from Industry Leaders"
+  content="Learn CFA from Maestro Finplan Academy: Certified by CFA | Learn from Industry Leaders"
   property="og:title"
 />
 <meta
-  content="Unlock your financial career potential with Maestro Finplan Academy – your top destination for CFA coaching. Learn from industry leaders as our instructors guide you through comprehensive courses, ensuring you receive the best education. Certified by FSAB, we're your trusted partner in building a successful financial future."
+  content="Unlock your financial career potential with Maestro Finplan Academy – your top destination for CFA coaching. Learn from industry leaders as our instructors guide you through comprehensive courses, ensuring you receive the best education. Certified by CFA, we're your trusted partner in building a successful financial future."
   property="og:description"
 />
 <meta
@@ -30,11 +30,11 @@
   property="og:image"
 />
 <meta
-  content="Learn CFA from Maestro Finplan Academy: Certified by FSAB | Learn from Industry Leaders"
+  content="Learn CFA from Maestro Finplan Academy: Certified by CFA | Learn from Industry Leaders"
   property="twitter:title"
 />
 <meta
-  content="Unlock your financial career potential with Maestro Finplan Academy – your top destination for CFA coaching. Learn from industry leaders as our instructors guide you through comprehensive courses, ensuring you receive the best education. Certified by FSAB, we're your trusted partner in building a successful financial future."
+  content="Unlock your financial career potential with Maestro Finplan Academy – your top destination for CFA coaching. Learn from industry leaders as our instructors guide you through comprehensive courses, ensuring you receive the best education. Certified by CFA, we're your trusted partner in building a successful financial future."
   property="twitter:description"
 />
 
@@ -208,23 +208,17 @@
             </div>
             <div class="cf-benefits-pointer-line"></div>
           </div>
+        
           <div class="cf-benefits-pointer-item">
             <div class="cf-benefits-pointer-heading-and-number">
               <div class="cf-benefits-pointer-number">02</div>
-              <h5 class="cf-case-study-number-text">Physical Study Material</h5>
+              <h5 class="cf-case-study-number-text">Certified by CFA</h5>
             </div>
             <div class="cf-benefits-pointer-line"></div>
           </div>
           <div class="cf-benefits-pointer-item">
             <div class="cf-benefits-pointer-heading-and-number">
               <div class="cf-benefits-pointer-number">03</div>
-              <h5 class="cf-case-study-number-text">Certified by FPSB</h5>
-            </div>
-            <div class="cf-benefits-pointer-line"></div>
-          </div>
-          <div class="cf-benefits-pointer-item">
-            <div class="cf-benefits-pointer-heading-and-number">
-              <div class="cf-benefits-pointer-number">04</div>
               <h5 class="cf-case-study-number-text">
                 Career Counseling through Webinars
               </h5>
@@ -245,25 +239,25 @@
         <div class="cf-benefits-pointers-right">
           <div class="cf-benefits-pointer-item">
             <div class="cf-benefits-pointer-heading-and-number">
-              <div class="cf-benefits-pointer-number">05</div>
+              <div class="cf-benefits-pointer-number">04</div>
               <h5 class="cf-case-study-number-text">
-                Unlimited doubt sessions over Skype, Phone call or Whatsapp
+                Unlimited doubt solving sessions
               </h5>
             </div>
             <div class="cf-benefits-pointer-line _3"></div>
           </div>
           <div class="cf-benefits-pointer-item">
             <div class="cf-benefits-pointer-heading-and-number">
-              <div class="cf-benefits-pointer-number">06</div>
+              <div class="cf-benefits-pointer-number">05</div>
               <h5 class="cf-case-study-number-text">Internal Mock tests</h5>
             </div>
             <div class="cf-benefits-pointer-line"></div>
           </div>
           <div class="cf-benefits-pointer-item">
             <div class="cf-benefits-pointer-heading-and-number">
-              <div class="cf-benefits-pointer-number">07</div>
+              <div class="cf-benefits-pointer-number">06</div>
               <h5 class="cf-case-study-number-text">
-                Free invites in NetworkFP organized events
+                Placement Assurance
               </h5>
             </div>
             <div class="cf-benefits-pointer-line"></div>
@@ -529,7 +523,7 @@
             />
             <div class="pricing-content">
               <div class="pricing-info">
-                <h3 class="heading-12">Tutition fees  (Only Live Classes)</h3>
+                <h3 class="heading-12">Tution fees (Per Level)</h3>
                 <h3>₹33,999</h3>
               </div>
               <div class="pricing-divider-two"></div>
@@ -539,12 +533,12 @@
                   <p class="tagline">Recorded Classes</p>
                 </div>
                 <div class="pricing-block">
-                  <p class="pricing-details-text">Levels</p>
-                  <p class="tagline">Each Level </p>
+                  <p class="pricing-details-text">Type</p>
+                  <p class="tagline">Only Live </p>
                 </div>
                 <div class="pricing-block">
                   <p class="pricing-details-text">Timings</p>
-                  <p class="tagline">2-3 hours (Weekend)</p>
+                  <p class="tagline">2-3 days in a Week</p>
                 </div>
               </div>
             </div>
@@ -606,13 +600,10 @@
             class="waves-master-image-hero-3"
           >
             <img
-              src="https://uploads-ssl.webflow.com/645e1049c8fcbff22dc45caf/6467521487b740a6fab870ee_WhatsApp%20Image%202023-05-19%20at%208.51.16%20AM.png"
+              src="assets/images/bhupesh.jpeg"
               loading="lazy"
               sizes="(max-width: 479px) 93vw, (max-width: 991px) 92vw, (max-width: 1439px) 94vw, 1272px"
-              srcset="
-                https://uploads-ssl.webflow.com/645e1049c8fcbff22dc45caf/6467521487b740a6fab870ee_WhatsApp%20Image%202023-05-19%20at%208.51.16%20AM-p-500.png 500w,
-                https://uploads-ssl.webflow.com/645e1049c8fcbff22dc45caf/6467521487b740a6fab870ee_WhatsApp%20Image%202023-05-19%20at%208.51.16%20AM.png       612w
-              "
+             
               alt=""
               class="waves-image-hero-3"
             />
