--- a/CFP.html
+++ b/CFP.html
@@ -247,7 +247,7 @@
             <div class="cf-benefits-pointer-heading-and-number">
               <div class="cf-benefits-pointer-number">05</div>
               <h5 class="cf-case-study-number-text">
-                Unlimited doubt sessions over Skype, Phone call or Whatsapp
+                Unlimited doubt solving sessions
               </h5>
             </div>
             <div class="cf-benefits-pointer-line _3"></div>
@@ -661,13 +661,13 @@
             />
             <div class="pricing-content">
               <div class="pricing-info">
-                <h3 class="heading-12">Tutition fees  (Recorded + Live Classes)</h3>
+                <h3 class="heading-12">Tution fees  (Recorded + Live Classes)</h3>
                 <h3>₹33,999</h3>
               </div>
               <div class="pricing-divider-two"></div>
               <div class="pricing-details">
                 <div class="pricing-block">
-                  <p class="pricing-details-text">120 - 140 hours</p>
+                  <p class="pricing-details-text">230 - 240 hours</p>
                   <p class="tagline">Recorded Classes</p>
                 </div>
                 <div class="pricing-block">
@@ -693,13 +693,13 @@
             />
             <div class="pricing-content">
               <div class="pricing-info">
-                <h3 class="heading-12">Tutition fees  (Recorded)</h3>
+                <h3 class="heading-12">Tution fees  (Recorded)</h3>
                 <h3>₹30,000</h3>
               </div>
               <div class="pricing-divider-two"></div>
               <div class="pricing-details">
                 <div class="pricing-block">
-                  <p class="pricing-details-text">120 - 140 hours</p>
+                  <p class="pricing-details-text">230 - 240 hours</p>
                   <p class="tagline">Recorded Classes</p>
                 </div>
                 <div class="pricing-block">
@@ -725,13 +725,13 @@
             />
             <div class="pricing-content">
               <div class="pricing-info">
-                <h3 class="heading-12">Tutition fees (Individual Levels)</h3>
+                <h3 class="heading-12">Tution fees (Individual Levels)</h3>
                 <h3>₹10,000</h3>
               </div>
               <div class="pricing-divider-two"></div>
               <div class="pricing-details">
                 <div class="pricing-block">
-                  <p class="pricing-details-text">120 - 140 hours</p>
+                  <p class="pricing-details-text">50 - 60 hours</p>
                   <p class="tagline">Recorded Classes</p>
                 </div>
                 <div class="pricing-block">
@@ -801,14 +801,11 @@
             class="waves-master-image-hero-3"
           >
             <img
-              src="https://uploads-ssl.webflow.com/645e1049c8fcbff22dc45caf/6467521487b740a6fab870ee_WhatsApp%20Image%202023-05-19%20at%208.51.16%20AM.png"
+              src="assets/images/bhupesh.jpeg"
               loading="lazy"
               sizes="(max-width: 479px) 93vw, (max-width: 991px) 92vw, (max-width: 1439px) 94vw, 1272px"
-              srcset="
-                https://uploads-ssl.webflow.com/645e1049c8fcbff22dc45caf/6467521487b740a6fab870ee_WhatsApp%20Image%202023-05-19%20at%208.51.16%20AM-p-500.png 500w,
-                https://uploads-ssl.webflow.com/645e1049c8fcbff22dc45caf/6467521487b740a6fab870ee_WhatsApp%20Image%202023-05-19%20at%208.51.16%20AM.png       612w
-              "
-              alt=""
+            
+              alt="bhupesh p Chaudhri the instructor and the ceo of maestrro finplan academy"
               class="waves-image-hero-3"
             />
           </div>
