--- a/Webinar.html
+++ b/Webinar.html
@@ -13,34 +13,7 @@
     rel="shortcut icon"
     type="image/x-icon"
   />
-    <meta
-      content="Hireup is a responsive, high-converting, and beautifully designed job board for technology businesses. Bright, vibrant, and easily adapted, it offers the perfect starting point for numerous business types."
-      name="description"
-    />
-    <meta
-      content="Hireup - Webflow HTML Website Template"
-      property="og:title"
-    />
-    <meta
-      content="Hireup is a responsive, high-converting, and beautifully designed job board for technology businesses. Bright, vibrant, and easily adapted, it offers the perfect starting point for numerous business types."
-      property="og:description"
-    />
-    <meta
-      content="https://uploads-ssl.webflow.com/63337525695d8ba70ab44222/63565e26a7b90c920bd3e9a4_OpenGraph.png"
-      property="og:image"
-    />
-    <meta
-      content="Hireup - Webflow HTML Website Template"
-      property="twitter:title"
-    />
-    <meta
-      content="Hireup is a responsive, high-converting, and beautifully designed job board for technology businesses. Bright, vibrant, and easily adapted, it offers the perfect starting point for numerous business types."
-      property="twitter:description"
-    />
-    <meta
-      content="https://uploads-ssl.webflow.com/63337525695d8ba70ab44222/63565e26a7b90c920bd3e9a4_OpenGraph.png"
-      property="twitter:image"
-    />
+  
     <meta property="og:type" content="website" />
     <meta content="summary_large_image" name="twitter:card" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
@@ -127,20 +100,20 @@
           <nav role="navigation" class="nav-menu w-nav-menu">
             <a href="/" class="nav-link w-nav-link">Home</a
             ><a
-              href="/about"
+              href="index.html/#"
               aria-current="page"
               class="nav-link w-nav-link w--current"
               >Team</a
-            ><a href="/browse" class="nav-link w-nav-link">Features</a
+            ><a href="index.html/#features" class="nav-link w-nav-link">Features</a
             ><a href="/blog" class="nav-link w-nav-link">Testimonials</a
-            ><a href="/pricing" class="nav-link w-nav-link">Webinar</a
+            ><a href="/Webinar.html" class="nav-link w-nav-link">Webinar</a
             ><a
               href="/about"
               aria-current="page"
               class="nav-link w-nav-link w--current"
               >FAQs</a
-            ><a href="/blog" class="nav-link w-nav-link">CFP</a
-            ><a href="/blog" class="nav-link w-nav-link">CFA</a>
+            ><a href="/CFP.html" class="nav-link w-nav-link">CFP</a
+            ><a href="/CFA.html" class="nav-link w-nav-link">CFA</a>
             <div class="navbar-mobile-button-wrapper">
               <a href="#" class="button-primary w-button">Login</a>
             </div>
