--- a/Webinar.html
+++ b/Webinar.html
@@ -402,28 +402,28 @@
             <div class="waves-column-links-footer-2">
               <div class="waves---paragraph-regular-2">Home</div>
               <div class="waves-links-wrap-footer-2">
-                <a href="#" class="waves-link-footer-2">Features</a
-                ><a href="#" class="waves-link-footer-2">Team</a
-                ><a href="#" class="waves-link-footer-2">Testimonials</a
-                ><a href="#" class="waves-link-footer-2">FAQs</a>
+                <a href="index.html#features" class="waves-link-footer-2">Features</a
+                ><a href="index.html#team" class="waves-link-footer-2">Team</a
+                ><a href="index.html#testinomials" class="waves-link-footer-2">Testimonials</a
+                ><a href="index.html#faqs" class="waves-link-footer-2">FAQs</a>
               </div>
             </div>
             <div class="waves-column-links-footer-2">
               <div class="waves---paragraph-regular-2">CFA</div>
               <div class="waves-links-wrap-footer-2">
-                <a href="#" class="waves-link-footer-2">Features</a
-                ><a href="#" class="waves-link-footer-2">Pathway to CFA</a
-                ><a href="#" class="waves-link-footer-2">Coaching Fees</a
+                <a href="CFA.html#features" class="waves-link-footer-2">Features</a
+                ><a href="CFA.html#pathway" class="waves-link-footer-2">Pathway to CFA</a
+                ><a href="CFA.html#fees_timings" class="waves-link-footer-2">Coaching Fees</a
                 >
               </div>
             </div>
             <div class="waves-column-links-footer-2">
               <div class="waves---paragraph-regular-2">CFP</div>
               <div class="waves-links-wrap-footer-2">
-                <a href="#" class="waves-link-footer-2">Who can do CFP?</a
-                ><a href="#" class="waves-link-footer-2">Pathway to CFP</a
-                ><a href="#" class="waves-link-footer-2">Coaching Fees</a
-                ><a href="#" class="waves-link-footer-2">Instructor</a>
+                <a href="CFP.html#do_it" class="waves-link-footer-2">Who can do CFP?</a
+                ><a href="CFP.html#pathway" class="waves-link-footer-2">Pathway to CFP</a
+                ><a href="CFP.html#fees_timings" class="waves-link-footer-2">Coaching Fees</a
+                ><a href="CFP.html#instructor" class="waves-link-footer-2">Instructor</a>
               </div>
             </div>
           </div>
