--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
             <div class="w-layout-grid testimonial-grid">
               <div class="testimonial-content-wrap">
                 <div class="testimonial-logo-wrap">
-                  <a href="" target="_blank"
+                  <a href="https://www.linkedin.com/in/nikita-kishnani-a1989a8a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"
                     rel="noopener noreferrer"></a>
                   <img src="linkedin-svgrepo-com.svg" loading="lazy" alt="linkedin icon" class="icon-extra-large" />
                 </div>
@@ -582,7 +582,7 @@
                   <br>I thank Bhupesh sir for his timely availability and understanding for any queries or doubts. Undoubtedly the best so far.Thank you Maestro !”
                 </p>
                 <div class="paragraph-regular text-color-gray-600">
-                  <a href="" target="_blank"
+                  <a href="https://www.linkedin.com/in/nikita-kishnani-a1989a8a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"
                     rel="noopener noreferrer"> <span class="text-color-primary">Nikita Kishnani</span></a> -
                   Completed CFP level 4
                 </div>
