--- a/index.html
+++ b/index.html
@@ -567,6 +567,31 @@
               </div>
             </div>
           </div>
+
+          <div class="w-slide ">
+            <div class="w-layout-grid testimonial-grid">
+              <div class="testimonial-content-wrap">
+                <div class="testimonial-logo-wrap">
+                  <a href="https://www.linkedin.com/in/shweta-naik-0458b416a/" target="_blank"
+                    rel="noopener noreferrer"> <img src="linkedin-svgrepo-com.svg" loading="lazy" alt=""
+                      class="icon-extra-large" /></a>
+
+                </div>
+                <p class="testimonial-quote">
+                  “Coming from an Engineering background, I was keen to manage my finances and chose to pursue CFP. My self-paced attempts didn't pan out, leading me to the AEP mode at Maestro Finplan Academy. Guided by Bhupesh sir's clear instructions and the Academy's high-quality resources, I successfully navigated and cleared all CFP levels by early 2022. With MFA's comprehensive support and personal guidance, I transitioned from an engineer to a CFP. Kudos to them for being a beacon to aspiring CFPs.”
+                </p>
+                <div class="paragraph-regular text-color-gray-600">
+                  <a href="https://www.linkedin.com/in/shweta-naik-0458b416a/"><span class="text-color-primary">K U Verghese</span></a> -
+                  Completed CFP Level 1 
+                </div>
+                <br>
+              </div>
+              <div class="testimonial-image-wrap">
+                <img src="assets/testinomials/t7.jpeg" loading="lazy" alt="" class="image-cover" />
+              </div>
+            </div>
+          </div>
+          
           <div class="w-slide ">
             <div class="w-layout-grid testimonial-grid">
               <div class="testimonial-content-wrap">
